[package]
name = "hiper-bridge"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winres]
OriginalFilename = "HiPerBridge.exe"
ProductName = "HiPer Bridge"
FileDescription = "HiPer Bridge - A GUI for HiPer Network Framework"
LegalCopyright = "Copyright © SteveXMH 2020-2022"

[dependencies]
scl-gui-widgets = { git = "https://github.com/ffip/scl.git", branch = "main" }
scl-macro = { git = "https://github.com/ffip/scl.git", branch = "main" }

anyhow = "1.0"
clipboard = "0.5"
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
oneshot = "0.1.3"
sha1_smol = { version = "1", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
path-absolutize = "3.0"
tinyjson = "2"
tinyget = { version = "1.0", features = ["https"] }
once_cell = "1.13.1"
libflate = "1.2.0"
chrono = "0.4.22"
dirs = "4.0.0"
zip = "^0.6.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "*"
cocoa = "*"
core-foundation = "*"

[target.'cfg(unix)'.dependencies.nix]
version = "*"
features = ["process", "user"]

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "*"
features = ["processthreadsapi", "winuser", "libloaderapi"]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.39"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "*"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
strip = true
